<resources>
    <string name="app_name">حراج الجمعة</string>
    <string name="or">أو</string>
    <string name="email_here">البريد الإلكتروني</string>
    <string name="pass">كلمة السر</string>
    <string name="old_pass">كلمة السر القديمة</string>
    <string name="new_pass">كلمة السر الجديدة</string>
    <string name="login">دخول</string>
    <string name="login__">تسجيل دخول</string>
    <string name="forgot_pass">نسيت كلمة السر؟ اضغط هنا</string>
    <string name="sign_up">Sign up</string>
    <string name="conf_pass">تأكيد كلمة السر</string>
    <string name="conf_new_pass">تأكيد كلمة السر الجديدة</string>
    <string name="register">تسجيل</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="name">الاسم</string>
    <string name="phone">رقم الجوال</string>
    <string name="contact_phone">رقم التواصل</string>
    <string name="ok">موافق</string>
    <string name="notOk">غير موافق</string>
    <string name="connection_error">خطأ في الاتصال بالانترنت</string>
    <string name="connection_errorــ">خطأ في الاتصال بالانترنت ٫ </string>
    <string name="full_name">Full name</string>
    <string name="full_name_empty">Full name is empty</string>
    <string name="email_empty">Email is empty</string>
    <string name="email_mobile_empty">Email or mobile field is empty</string>
    <string name="password_empty"> كلمة السر فارغة</string>
    <string name="confirm_password_empty">تأكيد كلمة السر فارغة</string>
    <string name="password_doesnt_match">كلمات السر ليست متطابقة</string>
    <string name="forgot">Forgot</string>
    <string name="google">Google+</string>
    <string name="facebook">Facebook</string>
    <string name="login_using_a_social_media_account">Login using a social media account</string>
    <string name="welcome">Welcome</string>
    <string name="verification_empty">Verification code is empty!</string>
    <string name="phone_empty">الجوال فارغ</string>
    <string name="please_enter_the_code_that_we_send_it_in_your_mobile">please, enter the code that we send it in your
        mobile
    </string>
    <string name="send_code">Send Code</string>
    <string name="reset_password_now">Reset password now</string>
    <string name="password">Password</string>
    <string name="conf_password">Confirm password</string>
    <string name="change">Change</string>
    <string name="password_invalid_error">Password must have upper and lower character and number min 8 chr max:255
    </string>
    <string name="email_doesnt_exist">Email doesn\'t exist</string>
    <string name="filter">Filter</string>
    <string name="sort_by">Sort by:</string>
    <string name="cancel">إلغاء</string>
    <string name="edit_name">Edit name</string>
    <string name="edit_s">Edit %s</string>
    <string name="sign_out">%s تسجيل خروج</string>
    <string name="skip">تخطي</string>
    <string name="change_language">Change Language</string>
    <string name="message_content">Message Content</string>
    <string name="message">الرسالة</string>
    <string name="messages">الرسائل</string>
    <string name="phone_here">رقم الجوال</string>
    <string name="welcome_in_app">أهلًا بك في حراج الجمعة</string>
    <string name="registration">تسجيل الدخول</string>
    <string name="agree_terms_conditions">أوافق على الشروط و الأحكام</string>
    <string name="city_r"><![CDATA[المدينة <font color="#f65828">*</font>]]></string>
    <string name="city">المدينة</string>
    <string name="country_r"><![CDATA[البلد <font color="#f65828">*</font>]]></string>
    <string name="country">الدولة</string>
    <string name="name_req">الاسم مطلوب</string>
    <string name="email_req">البريد الإلكتروني مطلوب</string>
    <string name="password_req">كلمة السر مطلوبة</string>
    <string name="confirm_req">تأكيد كلمة السر مطلوبة</string>
    <string name="country_req"><![CDATA[<font color="#f65828">البلد مطلوب *</font>]]></string>
    <string name="city_req"><![CDATA[<font color="#f65828">المدينة مطلوبة *</font>]]></string>
    <string name="confirm_terms">من فضلك يجب أن توافق على الشروط و الأحكام</string>
    <string name="phone_req">الجوال مطلوب</string>
    <string name="done_sent_code">تم إرسال كود التسجيل على رقم %s</string>
    <string name="time_remains">باقي %s على إرسال كود أخر هل تريد تغيير الرقم ؟</string>
    <string name="next">التالي</string>
    <string name="code">ادخل كود التسجيل</string>
    <string name="resend">أعد ارسال الكود</string>
    <string name="next_bids_s">مزادات قادمة</string>
    <string name="subscribe_to_bid">اشترك بالمزاد</string>
    <string name="subscribe">اشترك</string>
    <string name="subscribe_now">اشترك الأن</string>
    <string name="special_offers">إعلانات وعروض مميزه</string>
    <string name="home">الرئيسية</string>
    <string name="notifications">الاشعارات</string>
    <string name="more">المزيد</string>
    <string name="bid">المزاد</string>
    <string name="haraj">الحراج</string>
    <string name="select_a_profile_pic">من فضلك اختر صورة للصفحة الشخصية</string>
    <string name="code_sent">تم ارسال الكود بنجاح</string>
    <string name="code_not_correct">الكود غير صحيح</string>
    <string name="change_password">تغيير كلمة السر</string>
    <string name="save">حفظ</string>
    <string name="add_bidding">اضافة مزاد</string>
    <string name="current_bid">مزادات جارية</string>
    <string name="current_mazad">مزاد جاري</string>
    <string name="next_bid">مزاد قادم</string>
    <string name="expired_bid">مزاد منتهي</string>
    <string name="new_bid">مزاد جديد</string>
    <string name="name_mazad">عنوان المزاد</string>
    <string name="name_haraj">عنوان الاعلان</string>
    <string name="haraj_description">وصف تفصيلي للحراج</string>
    <string name="add_image_haraj">أضف صور الحراج</string>
    <string name="image_haraj">صور الحراج</string>
    <string name="permission_image_picker">Approve permissions to open Image Picker</string>
    <string name="title_mazad_req">عنوان الإعلان مطلوب</string>
    <string name="desc_mazad_req">وصف الإعلان مطلوب</string>
    <string name="select_min_photos">اختر صورة واحدة على الأقل</string>
    <string name="highest_price"><![CDATA[أعلى سعر <br/><font color="#43FF00">%s</font>]]></string>
    <string name="start_price"><![CDATA[سعر فتح المزاد <br/><font color="#43FF00">%s</font>]]></string>
    <string name="closing_price"><![CDATA[سعر الاغلاق <br/><font color="#43FF00">%s</font>]]></string>
    <string name="highest_price_"><![CDATA[أعلى سعر <font color="#43FF00">%s</font>]]></string>
    <string name="start_at"><![CDATA[سيتم فتح المزاد بعد :<br\>  <font color="#43FF00">%s</font>]]></string>
    <string name="end_at"><![CDATA[سيتم اغلاق المزاد بعد :<br\>  <font color="#43FF00">%s</font>]]></string>
    <string name="finished_at"><![CDATA[ انتهى المزاد في :<br\>  <font color="#FF0000">%s</font>]]></string>
    <string name="add_bid">أضف مزايدة</string>
    <string name="bidding_here">ادخل سعر المزايده</string>
    <string name="bid_req">يجب اضافة مزايدة</string>
    <string name="rules">شروط الاشتراك</string>
    <string name="success">تم بنجاح</string>
    <string name="success_report_comment">تم الابلاغ عن التعليق بنجاح</string>
    <string name="success_delete_comment">تم حذف التعليق بنجاح</string>
    <string name="success_delete_product">تم حذف الإعلان  بنجاح</string>
    <string name="success_report_product">تم الابلاغ عن الإعلان  بنجاح</string>
    <string name="image">صورة</string>
    <string name="mazad_time_remains">الزمن المتبقي علي بدايه المزاد</string>
    <string name="subscribers">المشاركون في المزاد</string>
    <string name="highest_price_text">الأعلى سعرًا</string>
    <string name="winner">(الفائز)</string>
    <string name="public_mazad">مزاد عام</string>
    <string name="private_mazad">مزاد خاص</string>
    <string name="mazad_finish_remains">الزمن المتبقى على نهاية المزاد</string>
    <string name="mazad_sold_with">بيع المزاد على %s ريال</string>
    <string name="_rial">%s  ريال</string>
    <string name="mazad_for_premium_only">الانضمام للمزاد مغلق لإكتمال العدد، للحصول على ميزة الانضمام التلقائي للمزادات يجب ان تملك عضوية مميزة للدخول التلقائي</string>
    <string name="mazad_for_premium_only_">لا يمكنك الاشتراك في هذا المزاد لإكتمال العدد، و يمكنك الاشتراك في مزادات أخرى و لضمان الدخول التلقائي في جميع المزادات و بدون دفع عربون لكل مزاد يمكنك تسجيل عضوية مشترك في الموقع.</string>
    <string name="new_haraj">اعلان جديد</string>
    <string name="add_haraj">أضف الاعلان</string>
    <string name="search">بحث</string>
    <string name="chat">مراسلة</string>
    <string name="whatsapp">وتساب</string>
    <string name="add_comment">اكتب تعليق</string>
    <string name="follow_comments">متابعة الردود</string>
    <string name="similar_ads">إعلانات مشابة</string>
    <string name="search_filter">تصفية البحث</string>
    <string name="haraj_terms">شروط الاعلان</string>
    <string name="all">الكل</string>
    <string name="done_add_comment">تم اضافة التعليق</string>
    <string name="please_add_comment">من فضلك، أكتب تعليق</string>
    <string name="aya">بسم الله الرحمن الرحيم\n قال الله تعالى:\n\n\" وَأَوْفُواْ بِعَهْدِ اللهِ إِذَا عَاهَدتُّمْ وَلاَ تَنقُضُواْ الأَيْمَانَ بَعْدَ تَوْكِيدِهَا وَقَدْ جَعَلْتُمُ اللهَ عَلَيْكُمْ كَفِيلاً \" \n\nصدق الله العظيم</string>
    <string name="term1">أتعهد و أقسم بالله أنا المعلن أن أدفع عمولة الموقع و هي 1&#x0025; من قيمة السلعة في حالة بيعها عن طريق الموقع أو بسبب الموقع و أن هذه العمولة هي أمانة في ذمتي. ملاحظة: عمولة الموقع هي على المعلن و لا تبرأ ذمة المعلن من العمولة إلا في حال دفعها، ذمة المعلن لا تبرأ من العمولة بمجرد ذكر أن العمولة على المشتري في الإعلان.</string>
    <string name="term2">أتعهد أنا المعلن أن جميع المعلومات التي سوف أذكرها بالإعلان صحيحة و في القسم الصحيح و أتعهد أن الصور التي سوف يتم عرضها هي صور حديثة لنفس السلعة، و ليست لسلعة أخرى مشابهة.</string>
    <string name="term3">أتعهد أنا المعلن أن أقوم بدفع العمولة خلال أقل من ١٠ أيام من تاريخ إستلام كامل سعر السلعة.</string>
    <string name="apply_review_text"><![CDATA[أتعهد و أقسم بالله أنا العضو <b>%s</b> أنني قمت بشراء سلعة من العضو <b>%s</b> و أن المعلومات التي قدمها في التقييم هي معلومات صحيحة و دقيقة و أتحمل مسئولية صحة هذه المعلومات]]></string>
    <string name="ta3hod" formatted="false"> * اتعهد واقسم بالله أنا المعلن أن أدفع عمولة الموقع وهي 1&#x0025; من قيمة البيع سواء تم البيع عن طريق الموقع أو بسببه.</string>
    <string name="did_bought"><![CDATA[هل قمت بشراء سلعة من <b>%s</b>؟]]></string>
    <string name="did_advice"><![CDATA[هل تنصح بالتعامل مع البائع <b>%s</b>؟]]></string>
    <string name="share_experience">اذكر تجربتك للزوار:</string>
    <string name="no">لا</string>
    <string name="yes">نعم</string>
    <string name="send">ارسال</string>
    <string name="commissionAccount">حساب عموله الموقع</string>
    <string name="username">اسم المستخدم</string>
    <string name="calc_commission">حساب العمولة</string>
    <string name="calc_commission_val">حساب قيمة العمولة :</string>
    <string name="if_product_sold_with">اذا تم بيع السلعة بسعر</string>
    <string name="commission_count">ريال، فإن المبلغ المستحق دفعه هو %d ريال</string>
    <string name="pay_commission">دفع العموله</string>
    <string name="can_use_bank_transaction">يمكنك استخدام التحويل البنكي لدفع العموله عن طريق إرسال حواله إلى حساباتنا في البنوك المحليه.</string>
    <string name="after_send_commission">بعد إرسال المبلغ،يجب مراسلتنا عبر النموذج التالي لأجل تسجيل العمولة بأسم عضويتك ثم الحصول على مميزات الموقع الخاصة بالعملاء:</string>
    <string name="transfer_form">نموذج تحويل العمولة</string>
    <string name="commission_val">مبلغ العمولة</string>
    <string name="bankNo">اسم البنك الذي تم التحويل اليه</string>
    <string name="sender_name">اسم المحول</string>
    <string name="sender_phone">رقم الجوال المرتبط بعضويتك</string>
    <string name="product_id">رقم الاعلان</string>
    <string name="notes">ملاحظات</string>
    <string name="please_delete_product">نرجو حذف الإعلان بعد الإنتهاء منه.</string>
</resources>