<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="290dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="56dp"
                android:paddingEnd="56dp">

                <TextView
                    style="@style/textHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registration" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/logo" />

                <TextView
                    style="@style/textHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_in_app" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="32dp"
                    app:suffixText="966+"
                    app:suffixTextAppearance="@style/textNormal"
                    app:suffixTextColor="@color/black">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneEditText"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawablePadding="8dp"
                        android:hint="@string/phone"
                        android:inputType="phone"
                        android:maxLength="9"
                        android:textSize="@dimen/text_normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/termsCheck"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="64dp"
                    android:layoutDirection="rtl"
                    android:text="@string/agree_terms_conditions"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_normal_x" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/next"
                    style="@style/buttonCardStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        style="@style/buttonText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/next" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <include layout="@layout/progress_layout" />
</RelativeLayout>